--- a/login.html
+++ b/login.html
@@ -8,8 +8,8 @@
     <script>
         let userName = prompt("Who's there?", '');
         if (userName == 'Admin') {
-            alert('OK');
-        } else if (userName == "") {
+            alert('Insert Password');
+        } else if (userName == '') {
             alert('Canceled');
         } else {
             alert("I don't know you");
@@ -17,7 +17,7 @@
         let pass = prompt('Password?', '');
         if (pass == 'TheMaster') {
             alert('Welcome!');
-        } else if (pass == "") {
+        } else if (pass == '') {
             alert('Canceled.');
         } else {
             alert('Wrong password');
